# microservice-testing-agent

./: .env.example  .gitignore  README.md  SUBMISSION_CLEANUP.md  add_user_form_snapshot.yml  add_user_modal_snapshot.md  booking-network.json  booking-submit-network.json  conftest.py  login-network.json  main.py  modal-submit-network.json  package-lock.json  package.json  pay-network.json  pyproject.toml  search-network.json  search_network.json  suppress_dialogs.js
.claude/: settings.local.json
agent/: README.md  __init__.py  agent.py  tools.py
artifacts/manual-debug/: README.md
core/: __init__.py  evaluation_rendering.py  evaluation_utils.py  executor.py  inference.py  journey_contract.py  models.py  mutation_utils.py  prompt_capture.py  report_rendering.py  reporting.py  sequence_extractor.py
direct_baseline/: README.md  research_12_index.yaml  runner.py
docs/: architecture_audit.md  browse_vs_generated_test_gap.md  current_code_flow.md  python_architecture_baseline.md  research_evaluation_scope.md  uc_vis_004_booking_finding.md
docs/exploration/: README.md
java/: pom.xml
prompt-captures/: add_test.prompts.txt
prompts/: README.md  generator.py
python/: README.md  agent.py  before_click  conftest.py  main.py  pyproject.toml
research/: README.md  classify_failure_modes.py
spec/: README.md  use-cases.txt
tests/: test_generator_prompt.py  test_journey_contract.py  test_network_diff.py  test_prompt_capture.py  test_retry_budget.py  test_run_artifacts.py  test_use_case_index.py  test_workflow_contract_gate.py
workflow/: __init__.py  workflow.py
(+419 files in other folders)
